--- a/src/app/components/doctor-login/doctor-login.component.css
+++ b/src/app/components/doctor-login/doctor-login.component.css
@@ -19,12 +19,13 @@ body{
 input[type="password"],
 input[type="email"],input[type="text"]
 {
+	
 	padding: 10px ;
-	box-sizing: content-box; 
-	border: 1px solid #ccc ;  
+	border: 1px solid #ccc ;
 	border-radius: 4px ;
-	margin-bottom: 20px ;  
-	width: 150px;
+	box-sizing: border-box ;
+	margin-bottom: 20px ;
+	width: 100% ;
 }
 
 
