--- a/src/app/components/doctor-login/doctor-login.component.css
+++ b/src/app/components/doctor-login/doctor-login.component.css
@@ -25,7 +25,7 @@ input[type="email"],input[type="text"]
 	border-radius: 4px ;
 	box-sizing: border-box ;
 	margin-bottom: 20px ;
-	width: 100% ;
+	width: 100;
 }
 
 
