--- a/src/app/components/doctor-dashboard/doctor-dashboard.component.css
+++ b/src/app/components/doctor-dashboard/doctor-dashboard.component.css
@@ -122,7 +122,10 @@ p {
     left : 49px;
 }
 
-       
+/* Checkbox checked toggle label bg color */
+.checkbox:checked + .toggle {
+    background-color: green;
+}      
 /* Checkbox vanished */
 .checkbox {
     display : none;
