--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -61,7 +61,7 @@
           <mat-icon>medical_services</mat-icon>
           <span>Manage Doctors</span>
         </button>
-        <button mat-button class="menu-button ">
+        <button mat-button class="menu-button " routerLink="/view-admins">
           <mat-icon>admin_panel_settings</mat-icon>
           <span>Manage Admins</span>
         </button>
